Add user to Db and apply JWT with auth
